fix(dark): fix eighth scheduling page header color in dark mode

--- a/intranet/static/css/dark/eighth.schedule.scss
+++ b/intranet/static/css/dark/eighth.schedule.scss
@@ -1,6 +1,6 @@
 @media (min-width: 500px) {
     .schedule-activity-page.floating .eighth-header {
-        background-color: inherit;
+        background-color: black;
     }
 }
 
